--- a/public/contact_us.html
+++ b/public/contact_us.html
@@ -1,4 +1,6 @@
-<head></head>
+<head>
+  <script src="/public/app.js"></script>
+</head>
 <body>
     <div class="flex justify-center">
         <h1 class="text-3xl font-medium mt-8">
@@ -6,20 +8,20 @@
         </h1>
     </div>
     <div class="flex justify-center">
-        <form class="w-full m-16 max-w-lg">
+        <form class="w-full m-16 max-w-lg" action="../mail.php" method="POST" enctype="multipart/form-data">
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-name">
                   Name
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="grid-name" type="text" placeholder="e.g. John Smith">
+                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="grid-name" type="text" placeholder="e.g. John Smith" name="name">
                 <p class="text-red-500 text-xs italic">Please fill out this field.</p>
               </div>
               <div class="w-full md:w-1/2 px-3">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-salon-name">
                   Salon/Parlor
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-salon-name" type="text" placeholder="e.g. John's Barbershop">
+                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-salon-name" type="text" placeholder="e.g. John's Barbershop" name="salon">
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -27,7 +29,7 @@
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-phone">
                   Phone
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="phone" type="phone">
+                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="phone" type="phone" name="phone">
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -35,7 +37,7 @@
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-email">
                   E-mail
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email">
+                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email" name="email">
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -43,16 +45,19 @@
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-message">
                   Message
                 </label>
-                <textarea class=" no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" id="message"></textarea>
+                <textarea class=" no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" id="message" type="text" name="message"></textarea>
               </div>
             </div>
             <div class="md:flex md:items-center">
               <div class="md:w-1/3">
-                <button class="shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none bg-yellow-1200 text-white font-bold py-2 px-4 rounded" type="button">
+                <button id="submitButton" onclick="displaySuccessMessage()" class="shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none bg-yellow-1200 text-white font-bold py-2 px-4 rounded" type="submit">
                   Send
                 </button>
               </div>
-              <div class="md:w-2/3"></div>
+              <div class="md:w-2/3 text-xl font-normal hidden" id="successMessage">
+                Thank You for your interest! We will keep you updated!
+              </div>
             </div>
           </form>
+
 </body>
