--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,17 @@
         <meta name="description" content="">
         <link rel="shortcut icon" type="icon" href="/public/images/MyBoothRentLogo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/public/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,500;1,100&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
         <script src="https://www.w3schools.com/lib/w3data.js"></script>
+        <script src="/public/app.js"></script>
     </head>
     <body class="w-full h-full absolute bg-mbr-background bg-cover bg-fixed font-poppins min-w-min">
         <div class="bg-black bg-opacity-60">
-            <div class="relative" w3-include-html="nav_header.html"></div>
+            <div class="relative" w3-include-html="/public/nav_header.html"></div>
             <div class="max-w-md float-left text-left ml-4 sm:ml-24">
                 <h1 class="float-left font-semibold text-white text-5xl break-normal">
                     Booth Rental Software for Owners
@@ -84,19 +85,19 @@
                         </div>
                         <div class="flex justify-center my-6 mx-12 sm:mx-24 border-purple-400 border-4 border-solid rounded-xl p-6">
                             <div class="text-center">
-                                <h4 class="font-bold">1-9 Booths</h4>
-                                <h1 class="m-2 text-4xl font-light text-gray-600">$19.99/<span class="text-xl">month</span></h1>
+                                <h4 class="font-bold">10-19 Booths</h4>
+                                <h1 class="m-2 text-4xl font-light text-gray-600">$29.99/<span class="text-xl">month</span></h1>
                                 <div class="justify-center font-bold bg-black text-yellow-1200 p-4 mt-8 text-xl rounded-lg">
-                                    Standard 
+                                    Business 
                                 </div>
                             </div>
                         </div>
                         <div class="flex justify-center my-6 mx-12 sm:mx-24 border-purple-400 border-4 border-solid rounded-xl p-6">
                             <div class="text-center">
-                                <h4 class="font-bold">1-9 Booths</h4>
-                                <h1 class="m-2 text-4xl font-light text-gray-600">$19.99/<span class="text-xl">month</span></h1>
+                                <h4 class="font-bold">20+ Booths</h4>
+                                <h1 class="m-2 text-4xl font-light text-gray-600">$39.99/<span class="text-xl">month</span></h1>
                                 <div class="justify-center font-bold bg-black text-yellow-1200 p-4 mt-8 text-xl rounded-lg">
-                                    Standard 
+                                    Premium 
                                 </div>
                             </div>
                         </div>
@@ -122,7 +123,7 @@
 
             </div>
             <div id="contact" class="bg-gray-100 mt-72 pb-10">
-                <div class="relative" w3-include-html="contact_us.html"></div>
+                <div class="relative" w3-include-html="/public/contact_us.html"></div>
             </div>
             <div class="mt-24 h-1/6 text-3xl font-light text-white p-12">
                 <a href="#">
@@ -132,6 +133,5 @@
             </div>
         </div>
         <script>w3IncludeHTML()</script>
-        <script src="app.js" async defer></script>
     </body>
 </html>
